--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
 angular.module('HelloWorldApp', [])
    .controller('HelloWorldController', function($scope) {
        vm = this;
-       vm.player = {name: 'Player Name', age: '30'};
+       //vm.player = {name: 'Player Name', age: '30'};
+	vm.players =  players = [
+			{"Name":"Cristiano Ronaldo","Age":32,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/20801.png","Overall":94,"Value":95000000,"Acceleration":89,"Finishing":94},
+			{"Name":"L. Messi","Age":30,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/158023.png","Overall":93,"Value":105000000,"Acceleration":92,"Finishing":95},
+			{"Name":"Neymar","Age":25,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/190871.png","Overall":92,"Value":123000000,"Acceleration":94,"Finishing":89},
+			{"Name":"L. Su\u00e1rez","Age":30,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/176580.png","Overall":92,"Value":97000000,"Acceleration":88,"Finishing":94}
+		];
+				 
 });
 </script>
 </head>
 <body>
 	<div ng-app='HelloWorldApp'>
 		<div ng-controller='HelloWorldController as ctrl'>
-			<h1>{{ctrl.player.name}}</h1>
+			<img ng-src="{{ctrl.players[3].Photo}}" />
+			<h1>{{ctrl.players[3].Name}}</h1>
 		</div>
 	</div>
 </body>
