--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src='angular.min.js'></script>
 <script>
 angular.module('HelloWorldApp', [])
@@ -17,10 +18,24 @@ angular.module('HelloWorldApp', [])
 </script>
 </head>
 <body>
-	<div ng-app='HelloWorldApp'>
+	<div class="container" ng-app='HelloWorldApp'>	
 		<div ng-controller='HelloWorldController as ctrl'>
-			<img ng-src="{{ctrl.players[3].Photo}}" />
-			<h1>{{ctrl.players[3].Name}}</h1>
+		  <h2>Fifa18 - Player Predictor</h2>
+		  <p>Some players:</p>            
+		  <table class="table table-striped">
+		    <thead>
+		      <tr>
+			<th>Photo</th>
+			<th>Name</th>
+		      </tr>
+		    </thead>
+		    <tbody>
+		      <tr ng-repeat="p in ctrl.players">
+			<td><img ng-src="{{p.Photo}}" /></td>
+			<td>{{p.Name}}</td>
+		      </tr>
+		    </tbody>
+		  </table>
 		</div>
 	</div>
 </body>
