--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src='angular.min.js'></script>
+<script src='players.js'></script>
 <script>
 angular.module('HelloWorldApp', [])
    .controller('HelloWorldController', function($scope) {
        vm = this;
-       //vm.player = {name: 'Player Name', age: '30'};
-	vm.players =  players = [
-			{"Name":"Cristiano Ronaldo","Age":32,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/20801.png","Overall":94,"Value":95000000,"Acceleration":89,"Finishing":94},
-			{"Name":"L. Messi","Age":30,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/158023.png","Overall":93,"Value":105000000,"Acceleration":92,"Finishing":95},
-			{"Name":"Neymar","Age":25,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/190871.png","Overall":92,"Value":123000000,"Acceleration":94,"Finishing":89},
-			{"Name":"L. Su\u00e1rez","Age":30,"Photo":"https:\/\/cdn.sofifa.org\/48\/18\/players\/176580.png","Overall":92,"Value":97000000,"Acceleration":88,"Finishing":94}
-		];
-				 
+	vm.players =  players; 
 });
 </script>
 </head>
