--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ angular.module('HelloWorldApp', [])
 			<th>Value</th>
 			<th>Overall</th>
 			<th>Overall Prediction</th>			      
+			<th>% Error</th>			      
 		      </tr>
 		    </thead>
 		    <tbody>
@@ -39,6 +40,7 @@ angular.module('HelloWorldApp', [])
 			<td>€ 190000000</td>
 			<td>93</td>
 			<td>91</td>
+			<td>1.3 %</td>
 		      </tr>
 		    </tbody>
 		  </table>
