--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@ angular.module('HelloWorldApp', [])
    .controller('HelloWorldController', function($scope) {
        	vm = this;
 	vm.players =  players; 
-	vm.searchText = "";
-	vm.searchFilter = "";
-	
-	vm.change = function()
-	{
-		if(vm.searchText.length > 3)
-			vm.searchFilter = searchText;
-		else
-			vm.searchFilter = ""
-		
-	}
+	vm.tempSearchText = "";
+	vm.searchText = "";	
 });
 </script>
 </head>
@@ -28,8 +19,13 @@ angular.module('HelloWorldApp', [])
 			
 			<!-- Players filter -->
 			<div class="form-group">
-			  <input type="text" class="form-control" type="text"  ng-model="ctrl.searchText" ng-change="ctrl.change()">
-   			  <input type="button" value="search"></input>
+				<!-- search text -->
+				  <input type="text" class="form-control" type="text"  ng-model="ctrl.tempSearchText" />
+			    	
+				<!-- search button -->
+				<button type="button" class="btn btn-info" ng-click="ctrl.searchText = ctrl.tempSearchText">
+			      		<span class="glyphicon glyphicon-search"></span> Search
+			    	</button>			
 			</div>
 
 			<!-- Players Table --> 
@@ -46,13 +42,13 @@ angular.module('HelloWorldApp', [])
 				      </tr>
 				    </thead>
 				    <tbody>
-				      <tr ng-repeat="p in ctrl.players | filter:{ Name: ctrl.searchFilter }">
+				      <tr ng-repeat="p in ctrl.players | filter:{ Name: ctrl.searchText }">
 					<td><img ng-src="{{p.Photo}}" /></td>
 					<td>{{p.Name}}</td>
-					<td>€ 190000000</td>
-					<td>93</td>
-					<td>91</td>
-					<td>1.3 %</td>
+					<td>€ {{p.value}}</td>
+					<td>{{p.Overall}}</td>
+					<td>{{p.Overall_Prediction_RBF}}</td>
+					<td>{p.Error_Percentage}} %</td>
 				      </tr>
 				    </tbody>
 				  </table>
