--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ angular.module('HelloWorldApp', [])
 					<td>€ {{p.value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
-					<td>{p.Error_Percentage}} %</td>
+					<td>{{p.Error_Percentage}} %</td>
 				      </tr>
 				    </tbody>
 				  </table>
