--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ angular.module('HelloWorldApp', [])
        	vm = this;
 	vm.players =  players; 
 	vm.tempSearchText = "";
-	vm.searchText = "";	
+	vm.searchText = "qwerty";	
 });
 </script>
 </head>
@@ -23,8 +23,8 @@ angular.module('HelloWorldApp', [])
 					<!-- search text -->
 				    <span class="input-group-addon"><i class="glyphicon glyphicon-filter"></i></span>					
 				    <div class="icon-addon addon-lg">
-					<input type="text" placeholder="Search" class="form-control" ng-model="ctrl.tempSearchText">
-					<label class="glyphicon glyphicon-search" rel="tooltip" title="player"></label>
+					<input type="text" placeholder="Search" class="form-control" ng-model="ctrl.tempSearchText" id="player">
+					<label for="player" class="glyphicon glyphicon-search" rel="tooltip" title="player"></label>
 				    </div>
 					<!-- search button -->
 				    <span class="input-group-btn">
@@ -47,7 +47,7 @@ angular.module('HelloWorldApp', [])
 				      </tr>
 				    </thead>
 				    <tbody>
-				      <tr ng-repeat="p in ctrl.players | filter:{ Name: ctrl.searchText }">
+				      <tr ng-repeat="p in ctrl.players | filter:{ Name: ctrl.searchText } | orderBy:'Name'">
 					<td><img ng-src="{{p.Photo}}" /></td>
 					<td>{{p.Name}}</td>
 					<td>€ {{p.value}}</td>
