--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ angular.module('HelloWorldApp', [])
 					<!-- search text -->
 				    <span class="input-group-addon"><i class="glyphicon glyphicon-filter"></i></span>					
 				    <div class="icon-addon addon-lg">
-					<input type="text" placeholder="Search" class="form-control" ng-model="ctrl.tempSearchText" id="player">
+					<input type="text" placeholder="Search" class="form-control" ng-model="ctrl.tempSearchText" id="player" />
 					<label for="player" class="glyphicon glyphicon-search" rel="tooltip" title="player"></label>
 				    </div>
 					<!-- search button -->
