--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ angular.module('HelloWorldApp', [])
 		<div ng-controller='HelloWorldController as ctrl'>
 			
 			<!-- Players filter -->
-			<div class="row">				
+			<div class="row" style="padding-bottom: 25px;">				
 			    <div class="input-group">
 			      <input type="text" class="form-control" ng-model="ctrl.tempSearchText" placeholder="Search">
 			      <span class="input-group-btn">
