--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 angular.module('HelloWorldApp', [])
    .controller('HelloWorldController', function($scope) {
        	vm = this;
-	vm.players =  players; 
+	vm.players =  players18; 
 	vm.tempSearchText = "Suárez";
 	vm.searchText = "Suárez";	
 
