--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src='angular.min.js'></script>
-<script src='players.js'></script>
+<script src='players18.js'></script>
 <script>
 angular.module('HelloWorldApp', [])
    .controller('HelloWorldController', function($scope) {
        	vm = this;
-	vm.players =  players18; 
+	vm.players =  players; 
 	vm.tempSearchText = "Suárez";
 	vm.searchText = "Suárez";	
 
