--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ angular.module('HelloWorldApp', [])
 			    <div class="input-group">
 			      <input type="text" class="form-control" ng-model="ctrl.tempSearchText" placeholder="Search" ng-keypress="ctrl.keypress($event)">
 			      <span class="input-group-btn">
-				<button class="btn btn-secondary" type="button" ng-click="ctrl.search()>Go!</button>
+				<button class="btn btn-secondary" type="button" ng-click="ctrl.search()">Go!</button>
 			      </span>
 			    </div>
 			</div>
