--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ angular.module('Fifa18App', [])
 			</div>
 
 			<!-- Players Table --> 
-			<div style="height: 500px; overflow-y: scroll;">
+			<div style="height: 500px;">
 				  <table class="table table-striped">
 				    <thead>
 				      <tr>
