--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ angular.module('Fifa18App', [])
 				      <tr>
 					<th></th>
 					<th>Name</th>
+					<th>Age</th>
+					<th>Acceleration</th>
+					<th>Finishing</th>
 					<th>Value</th>
 					<th>Overall</th>
 					<th>Overall Prediction</th>			      
@@ -56,6 +59,9 @@ angular.module('Fifa18App', [])
 				      <tr ng-repeat="p in ctrl.players | filter:{ Name: ctrl.searchText } | orderBy:'Name'">
 					<td><img ng-src="{{p.Photo}}" /></td>
 					<td>{{p.Name}}</td>
+					<td>{{p.Age}}</td>
+					<td>{{p.Acceleration}}</td>
+					<td>{{p.Finishing}}</td>					      
 					<td>€ {{p.Value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
