--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ angular.module('Fifa18App', [])
 					<td>€ {{p.Value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
-					<td>{{p.Error_Percentage}} %</td>
+					<td>{{p.Error_Percentage}}</td>
 				      </tr>
 				    </tbody>
 				  </table>
