--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ angular.module('Fifa18App', [])
 					<th>Age</th>
 					<th>Acceleration</th>
 					<th>Finishing</th>
-					<th>Value</th>
+					<th>Value (€)</th>
 					<th>Overall</th>
 					<th>Overall Prediction</th>			      
 					<th>% Error</th>			      
@@ -62,7 +62,7 @@ angular.module('Fifa18App', [])
 					<td>{{p.Age}}</td>
 					<td>{{p.Acceleration}}</td>
 					<td>{{p.Finishing}}</td>					      
-					<td>€ {{p.Value}}</td>
+					<td>{{p.Value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
 					<td>{{p.Error_Percentage}}</td>
