--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ angular.module('Fifa18App', [])
 					<td><img ng-src="{{p.Photo}}" /></td>
 					<td>{{p.Name}}</td>
 					<td>{{p.Age}}</td>
-					<td>€ {{p.Finishing}}</td>					      
-					<td>{{p.Value}}</td>
+					<td>{{p.Finishing}}</td>					      
+					<td>€ {{p.Value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
 					<td>{{p.Error_Percentage}} %</td>
