--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ angular.module('Fifa18App', [])
 					<td>{{p.Name}}</td>
 					<td>{{p.Age}}</td>
 					<td>{{p.Finishing}}</td>					      
-					<td>€ {{p.Value}}</td>
+					<td>{{p.Value}}</td>
 					<td>{{p.Overall}}</td>
 					<td>{{p.Overall_Prediction_RBF}}</td>
-					<td>{{p.Error_Percentage}} %</td>
+					<td>{{p.Error_Percentage}}</td>
 				      </tr>
 				    </tbody>
 				  </table>
